@@ -24,6 +24,9 @@ Changes
 Fixes
 =====
 
+- Improved error message when using the `DISTINCT` clause on unsupported data
+  types. Also improved documentation to note the data type restriction.
+
 - Fixed an issue that could cause ``INSERT INTO`` statements into partitioned
   tables to not work correctly. This only occurred if a ``query`` instead of
   the ``VALUES`` clause was used.
